Fix alignment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,9 +21,10 @@ header {
 
 header h1 {
   font-weight: bold;
+  margin: 0;
   font-size: 36px;
   color: #fce138;
-  margin: 0;
+  
 }
   
 header a {
@@ -164,25 +165,28 @@ Hero-form h3 {
   color: #39a6b2;
   width: 80%;
   font-size: 20px;
+  text-align: center
 }
 
+/* add this alongside your other declarations */
 .intro p {
-  /* add this alongside your other declarations */
-  margin: 0 auto;
+  text-align: center;
+
 }
 
 .steps { 
-  text-align: center;
+  
   background: #fce138;
 }
 
 .section-title {
   font-size: 55px;
   color: #024e76;
-  margin-bottom: 35px;
-  padding: 0 100px 20px 100px;
-  display: inline-block;
   border-bottom: 3px solid;
+  padding-bottom: 20px;
+  text-align: center;
+  margin: 0 auto 35px auto;
+  width: 50%;
 }
 
 .primary-border {
@@ -218,7 +222,7 @@ Hero-form h3 {
 }
 
 .trainers {
-  text-align: center;
+
 }
 
 .trainer {
@@ -275,7 +279,7 @@ Hero-form h3 {
 
 /* REACH OUT STYLES START */
 .contact {
-  text-align: center;
+  
   background: #024e76;
 }
 
@@ -314,3 +318,7 @@ Hero-form h3 {
 }
 
 /* REACH OUT STYLES END */
+
+.flex-row {
+  display: flex;
+}
